==================================================
Commit Hash: 73b6123f2d6f0d492524578803b991503f4d29f2
Author: Niwatori401
Date: Sun Jun 16 18:05:41 2024

Update credits

==================================================
Commit Hash: 4923ebbd8902875911e665b0ab5e12545d5d902b
Author: Niwatori401
Date: Sun Jun 16 17:58:26 2024

Update perk icons (Thanks Toggle!)

==================================================
Commit Hash: 144a5cc6b8920f48e96d9c4c9ff4a73e35dfe82a
Author: Niwatori401
Date: Mon Apr 15 01:58:36 2024

Fix issue where shamblers would break right click menus

==================================================
Commit Hash: cb189f0cf2d6d8db8376ea2b6059c499f858c267
Author: Niwatori401
Date: Sun Apr 14 02:27:56 2024

Fix error introduced by previous patch

==================================================
Commit Hash: 9f0b07eac3e588656ab3da5f0135a8504703a623
Author: Niwatori401
Date: Sun Apr 14 01:30:33 2024

Fix bug causing shamblers to throw errors

==================================================
Commit Hash: 834140f5995157b51476617e8e82159930883595
Author: Niwatori401
Date: Thu Apr 11 21:29:34 2024

Re-enable patch to display prisoner gaining resistance
Re-enable hoverchair rendering patch
Re-enable start screen patch
Disable two patches regarding shell clothing

==================================================
Commit Hash: 4968e525c6cd3937c0e99fecca9d83164da57f2f
Author: Niwatori401
Date: Thu Apr 11 04:02:26 2024

Re-enable blanket hiding mechanic
Re-enable hoverchair hiding patch

==================================================
Commit Hash: fbc06047624a34fa39bf3c71c8893b5bdac0349b
Author: Niwatori401
Date: Wed Apr 10 07:24:00 2024

Restore tattoo hiding for custom body patch

==================================================
Commit Hash: 27e6f0f2173d8ba655994b29ceed198ccc20200d
Author: Niwatori401
Date: Wed Apr 10 07:10:45 2024

Restore body size update patch
Restore body sprite path swapping patch
Restore clothing refresh on lay down patch